--- a/shoppingList/AppShell.xaml
+++ b/shoppingList/AppShell.xaml
@@ -4,12 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:shoppingList"
+    xmlns:views="clr-namespace:shoppingList.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="shoppingList">
-
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <ShellContent
+             ContentTemplate="{DataTemplate local:MainPage}"/>
+    </TabBar>
 
 </Shell>
