--- a/shoppingList/Views/ItemView.xaml
+++ b/shoppingList/Views/ItemView.xaml
@@ -2,14 +2,14 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="shoppingList.Views.Item"
-             xmlns:Models="clr-namespace:shoppingList.Models"
-             x:DataType="Models:ItemModel">
+             xmlns:ViewModels="clr-namespace:shoppingList.ViewModels"
+             x:DataType="ViewModels:ItemViewModel">
 
     <SwipeView>
         <SwipeView.RightItems>
         </SwipeView.RightItems>
 
-        <Border BackgroundColor="{Binding bgColor}" 
+        <Border BackgroundColor="{Binding BgColor}" 
                 Stroke="Transparent" 
                 Margin="0,2">
             <Grid Padding="10,8" ColumnSpacing="10">
@@ -22,39 +22,39 @@
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="0" Text="🚫" Command="{Binding DeleteItemButton}" Background="Transparent" ></Button>
                 <CheckBox Grid.Column="1" 
-                         IsChecked="{Binding bought}"
+                         IsChecked="{Binding Bought}"
                          VerticalOptions="Center"/>
 
                 <VerticalStackLayout Grid.Column="2" 
                                     VerticalOptions="Center">
-                    <Label Text="{Binding name}" 
-                           TextColor="{Binding textColor}"
-                           TextDecorations="{Binding textDecor}"
+                    <Label Text="{Binding Name}" 
+                           TextColor="{Binding TextColor}"
+                           TextDecorations="{Binding TextDecor}"
                            FontSize="16"
                            FontAttributes="Bold"/>
-                    <Label Text="{Binding optionalText}" 
+                    <Label Text="Opcjonalne"
                            TextColor="#FFA500"
                            FontSize="12"
                            IsVisible="{Binding Optional}"/>
                 </VerticalStackLayout>
 
                 <Label Grid.Column="3" 
-                       Text="{Binding store}"
-                       TextColor="{Binding textColor}"
-                       TextDecorations="{Binding textDecor}"
+                       Text="{Binding Store}"
+                       TextColor="{Binding TextColor}"
+                       TextDecorations="{Binding TextDecor}"
                        VerticalOptions="Center"
                        FontSize="14"
                        Margin="5,0"/>
 
                 <Label Grid.Column="4" 
                        VerticalOptions="Center"
-                       TextColor="{Binding textColor}"
-                       TextDecorations="{Binding textDecor}"
+                       TextColor="{Binding TextColor}"
+                       TextDecorations="{Binding TextDecor}"
                        FontSize="14">
                     <Label.Text>
                         <MultiBinding StringFormat="{}{0} {1}">
-                            <Binding Path="amount"/>
-                            <Binding Path="unit"/>
+                            <Binding Path="Amount"/>
+                            <Binding Path="Unit"/>
                         </MultiBinding>
                     </Label.Text>
                 </Label>
