--- a/shoppingList/Views/StoreListView.xaml
+++ b/shoppingList/Views/StoreListView.xaml
@@ -19,7 +19,7 @@
                     <DataTemplate>
                         <SwipeView>
                             <Grid Padding="10,5" 
-                                  BackgroundColor="{Binding bgColor}"
+                                  BackgroundColor="{Binding BgColor}"
                                   Margin="0,2">
 
                                 <Grid.ColumnDefinitions>
@@ -31,18 +31,18 @@
                                 <Button Grid.Column="0" Text="🚫" Command="{Binding DeleteItemButton}" Background="Transparent" ></Button>
 
                                 <CheckBox Grid.Column="1" 
-                                         IsChecked="{Binding bought}"
+                                         IsChecked="{Binding Bought}"
                                          VerticalOptions="Center"
                                          Margin="0,0,10,0"/>
 
                                 <VerticalStackLayout Grid.Column="2" 
                                                     VerticalOptions="Center">
-                                    <Label Text="{Binding name}" 
-                                           TextColor="{Binding textColor}"
-                                           TextDecorations="{Binding textDecor}"
+                                    <Label Text="{Binding Name}" 
+                                           TextColor="{Binding TextColor}"
+                                           TextDecorations="{Binding TextDecor}"
                                            FontSize="16"
                                            FontAttributes="Bold"/>
-                                    <Label Text="{Binding optionalText}" 
+                                    <Label Text="{Binding OptionalText}" 
                                            TextColor="#FFA500"
                                            FontSize="12"
                                            IsVisible="{Binding Optional}"/>
@@ -50,14 +50,14 @@
 
                                 <Label Grid.Column="3" 
                                        VerticalOptions="Center"
-                                       TextColor="{Binding textColor}"
-                                       TextDecorations="{Binding textDecor}"
+                                       TextColor="{Binding TextColor}"
+                                       TextDecorations="{Binding TextDecor}"
                                        FontSize="14"
                                        Margin="10,0,0,0">
                                     <Label.Text>
                                         <MultiBinding StringFormat="{}{0} {1}">
-                                            <Binding Path="amount"/>
-                                            <Binding Path="unit"/>
+                                            <Binding Path="Amount"/>
+                                            <Binding Path="Unit"/>
                                         </MultiBinding>
                                     </Label.Text>
                                 </Label>
